--- a/Builder/templates/Builder/template1.html
+++ b/Builder/templates/Builder/template1.html
@@ -18,8 +18,18 @@
 
     <p><h1>Activities</h1></p>
     <hr style="border: 1px solid grey"></hr>
-    <div class="size" style="position: relative;"><b>Leetcode</b> <span style="position: absolute; right: 750px;"><b>Solved Num Problems</b> (Num Easy, Num Medium, Num Hard)</span></div>
-    <div class="size" style="position: relative;"><b>CodeForces</b> <span style="position: absolute; right: 1100px;"><b>Solved Num Problems</b></span></div>
+    <ul>
+        <li><div class="size" style="position: relative;"><b>Leetcode</b> <span style="position: absolute; right: 750px;"><b>Solved Num Problems</b> (Num Easy, Num Medium, Num Hard)</span></div></li>
+        <li><div class="size" style="position: relative;"><b>CodeForces</b> <span style="position: absolute; right: 1100px;"><b>Solved Num Problems</b></span></div></li>
+    </ul>
+    <p><h1>Technical Skills</h1></p>
+    <hr style="border: 1px solid grey"></hr>
+    <ul>
+        <li><div class="size" style="position: relative;"><b>Programming</b> <span style="position: absolute; right: 1039px;">Programming Language(s) Ex. C#</span></div></li>
+        <li><div class="size" style="position: relative;"><b>Frameworks</b> <span style="position: absolute; right: 1115px;">Framework(s) Ex.Django</span></div></li>
+        <li><div class="size" style="position: relative;"><b>Operating Systems</b> <span style="position: absolute; right: 1039px;">Operating System(s) Ex.Windows</span></div></li>
+        <li><div class="size" style="position: relative;"><b>Databases</b> <span style="position: absolute; right: 1103px;">Databases Ex. PostgreSQL</span></div></li>
+        <li><div class="size" style="position: relative;"><b>Tools</b> <span style="position: absolute; right: 1240px;">Tool(s) Ex.</span></div></li>
 </div>
 
 {% endblock %}
