added user access to templates

--- a/Builder/templates/Builder/Junior.html
+++ b/Builder/templates/Builder/Junior.html
@@ -30,6 +30,22 @@
         <li><div class="size" style="position: relative;"><b>Operating Systems</b> <span style="position: absolute; right: 1039px;">Operating System(s) Ex.Windows</span></div></li>
         <li><div class="size" style="position: relative;"><b>Databases</b> <span style="position: absolute; right: 1103px;">Databases Ex. PostgreSQL</span></div></li>
         <li><div class="size" style="position: relative;"><b>Tools</b> <span style="position: absolute; right: 1240px;">Tool(s) Ex.</span></div></li>
-</div>
+        </div>
+        <h1>Projects</h1>
+        <hr style="border: 1px solid grey"></hr>
+        <ul>
+            <li><div class="size" style="position: relative;"><b>Project Name 1</b> <span style="position: absolute; right: 870px;">Short description of the project, key technologies used.</span></div></li>
+            <li><div class="size" style="position: relative;"><b>Project Name 2</b> <span style="position: absolute; right: 870px;">Short description of the project, key technologies used.</span></div></li>
+            <li><div class="size" style="position: relative;"><b>Project Name 3</b> <span style="position: absolute; right: 870px;">Short description of the project, key technologies used.</span></div></li>
+        </ul>
+
+
+        <h1>Education</h1>
+        <hr style="border: 1px solid grey"></hr>
+        <ul>
+            <li><div class="size" style="position: relative;"><b>University Name</b> <span style="position: absolute; right: 1130px;">Degree, Year of Graduation</span></div></li>
+            <li><div class="size" style="position: relative;"><b>Relevant Courses</b> <span style="position: absolute; right: 1090px;">Course Name 1, Course Name 2</span></div></li>
+        </ul>
+
 
 {% endblock %}
