--- a/Builder/templates/Builder/index.html
+++ b/Builder/templates/Builder/index.html
@@ -9,35 +9,34 @@
 
 <div class="row">
     <div class="col-md-2">
-        <div class="card text-white bg-dark mb-3 card_container" style="max-width: 18rem;">
+        <a href ="{% url 'template' 'senior' %}"><div class="card text-white bg-dark mb-3 card_container" style="max-width: 18rem;">
             <div class="card-header">Software Engineer</div>
             <div class="card-body">
                 <h5 class="card-title">Senior</h5>
                 <p class="card-text">A Senior Software Engineer CV template emphasizes technical leadership, advanced programming skills, and project management experience. Key sections include a professional summary, technical skills, leadership roles, project achievements, work experience in reverse chronological order, and education. The template highlights contributions to large-scale projects, mentorship, and expertise in technologies, with a focus on problem-solving and innovative solutions.</p>
             </div>
-        </div>
+        </div></a>
     </div>
 
     <div class="col-md-2">
-        <div class="card text-white bg-dark mb-3 card_container" style="max-width: 18rem;">
+        <a href ="{% url 'template' 'junior' %}" style="text-decoration: none;"><div class="card text-white bg-dark mb-3 card_container" style="max-width: 18rem;">
             <div class="card-header">Software Engineer</div>
             <div class="card-body">
                 <h5 class="card-title">Junior</h5>
                 <p class="card-text">A Junior Engineer CV template emphasizes foundational engineering skills, practical experience, and a willingness to learn. Key sections include a professional summary, technical skills, educational background, internships, and relevant projects. The template highlights contributions to academic projects, collaboration in team environments, and proficiency in essential technologies, focusing on adaptability and a strong desire for growth in the engineering field.</p>
-               
             </div>
-        </div>
+        </div></a>
     </div>
 
     <div class="col-md-2">
-        <div class="card text-white bg-dark mb-3 card_container" style="max-width: 18rem;">
+        <a href ="{% url 'template' 'ux' %}"><div class="card text-white bg-dark mb-3 card_container" style="max-width: 18rem;">
             <div class="card-header">UX/UI Designer </div>
             <div class="card-body">
                 <h5 class="card-title">Professional Designer</h5>
                 <p class="card-text">A UX/UI Designer CV template emphasizes user-centered design principles, creativity, and proficiency with design tools. Key sections include a professional summary, design skills, educational background, portfolio highlights, and relevant experience. The template highlights contributions to user research, wireframing, prototyping, and collaboration in team environments, focusing on innovation and a strong commitment to enhancing user experiences.
                 </p>
             </div>
-        </div>
+        </div></a>
     </div>
 </div>
 
