--- a/Builder/templates/Builder/Junior.html
+++ b/Builder/templates/Builder/Junior.html
@@ -1,51 +1,56 @@
 {% extends 'Builder/layout.html' %}
+{% load static %}
 {% block title %}
     Senior Developer Template 
 {% endblock %}
 {% block body %}
     <div class="padding">
     <div id="font">
-    <h1 style="text-align: center;">Your Name</h1>
+    <h1 style="text-align: center;" class="change">Your Name</h1>
     <h3 style="text-align: center;">Junior Software Engineer</h3>
+    <button class="btn btn-dark" id="bar" style="display: none; position: relative; right: 0;">Save</button>
     <hr style="border: 3px solid"></hr>
     <div class="icons">
-        <i class="fa-solid fa-location-dot fa-2x spacing"></i> <span class="size">City, Country</span>&nbsp&nbsp
-        <i class="fa-solid fa-phone fa-2x spacing"></i><span class="size">Phone Number</span>
-        <i class="fa-solid fa-envelope fa-2x spacing"></i><span class="size">Email</span>
-        <i class="fa-brands fa-linkedin fa-2x spacing"></i><span class="size">LinkedIn</span>
-        <i class="fa-brands fa-github fa-2x spacing"></i><span class="size">GitHub</span>
+        <i class="fa-solid fa-location-dot fa-2x spacing"></i> <i class="size change">City, Country</i>&nbsp&nbsp
+        <i class="fa-solid fa-phone fa-2x spacing"></i><i class="size change">Phone Number</i>
+        <i class="fa-solid fa-envelope fa-2x spacing"></i><i class="size change">Email</i>
+        <i class="fa-brands fa-linkedin fa-2x spacing"></i><i class="size change">LinkedIn</i>
+        <i class="fa-brands fa-github fa-2x spacing"></i><i class="size change">GitHub</i>
     </div>
 
     <p><h1>Activities</h1></p>
     <hr style="border: 1px solid grey"></hr>
     <ul>
-        <li><div class="size" style="position: relative;"><b>Leetcode</b> <span style="position: absolute; right: 750px;"><b>Solved Num Problems</b> (Num Easy, Num Medium, Num Hard)</span></div></li>
-        <li><div class="size" style="position: relative;"><b>CodeForces</b> <span style="position: absolute; right: 1100px;"><b>Solved Num Problems</b></span></div></li>
+        <li><div class="size" style="position: relative;"><b>Leetcode</b> <span style="position: absolute; right: 744px;"><b>Solved <b class="change">Num</i> Problems</i> (<i class="change">Num</i> Easy, <i class="change">Num</i> Medium, <i class="change">Num</i> Hard)</span></div></li>
+        <li><div class="size" style="position: relative;"><b>CodeForces</b> <span style="position: absolute; right: 1100px;"><b>Solved <i class="change">Num</i> Problems</b></span></div></li>
     </ul>
     <p><h1>Technical Skills</h1></p>
     <hr style="border: 1px solid grey"></hr>
     <ul>
-        <li><div class="size" style="position: relative;"><b>Programming</b> <span style="position: absolute; right: 1039px;">Programming Language(s) Ex. C#</span></div></li>
-        <li><div class="size" style="position: relative;"><b>Frameworks</b> <span style="position: absolute; right: 1115px;">Framework(s) Ex.Django</span></div></li>
-        <li><div class="size" style="position: relative;"><b>Operating Systems</b> <span style="position: absolute; right: 1039px;">Operating System(s) Ex.Windows</span></div></li>
-        <li><div class="size" style="position: relative;"><b>Databases</b> <span style="position: absolute; right: 1103px;">Databases Ex. PostgreSQL</span></div></li>
-        <li><div class="size" style="position: relative;"><b>Tools</b> <span style="position: absolute; right: 1240px;">Tool(s) Ex.</span></div></li>
+        <li><div class="size" style="position: relative;"><b>Programming</b> <span style="position: absolute; right: 1039px;"><i class="change">Programming Language(s) Ex. C#</i></span></div></li>
+        <li><div class="size" style="position: relative;"><b>Frameworks</b> <span style="position: absolute; right: 1115px;"><i class="change">Framework(s) Ex.Django</i></span></div></li>
+        <li><div class="size" style="position: relative;"><b>Operating Systems</b> <span style="position: absolute; right: 1039px;"><i class="change">Operating System(s) Ex.Windows</i></span></div></li>
+        <li><div class="size" style="position: relative;"><b>Databases</b> <span style="position: absolute; right: 1103px;"><i class="change">Databases Ex. PostgreSQL</i></span></div></li>
+        <li><div class="size" style="position: relative;"><b>Tools</b> <span style="position: absolute; right: 1240px;"><i class="change">Tool(s) Ex.</i></span></div></li>
         </div>
         <h1>Projects</h1>
         <hr style="border: 1px solid grey"></hr>
         <ul>
-            <li><div class="size" style="position: relative;"><b>Project Name 1</b> <span style="position: absolute; right: 870px;">Short description of the project, key technologies used.</span></div></li>
-            <li><div class="size" style="position: relative;"><b>Project Name 2</b> <span style="position: absolute; right: 870px;">Short description of the project, key technologies used.</span></div></li>
-            <li><div class="size" style="position: relative;"><b>Project Name 3</b> <span style="position: absolute; right: 870px;">Short description of the project, key technologies used.</span></div></li>
+            <li><div class="size"style="position: relative;"><b>Project Name 1</b> <span style="position:absolute; right: 870px;"><i class="change">Short description of the project, key technologies used.</i></span></div></li>
+            <li><div class="size" style="position: relative;"><b>Project Name 2</b> <span style="position: absolute; right: 870px;"><i class="change">Short description of the project, key technologies used.</i></span></div></li>
+            <li><div class="size" style="position: relative;"><ib>Project Name 3</b> <span style="position: absolute; right: 870px;"><i class="change">Short description of the project, key technologies used.</i></span></div></li>
         </ul>
 
 
         <h1>Education</h1>
         <hr style="border: 1px solid grey"></hr>
         <ul>
-            <li><div class="size" style="position: relative;"><b>University Name</b> <span style="position: absolute; right: 1130px;">Degree, Year of Graduation</span></div></li>
-            <li><div class="size" style="position: relative;"><b>Relevant Courses</b> <span style="position: absolute; right: 1090px;">Course Name 1, Course Name 2</span></div></li>
+            <li><div class="size" style="position: relative;"><b>University Name</b> <span style="position: absolute; right: 1130px;"><i class="change">Degree, Year of Graduation</i></span></div></li>
+            <li><div class="size" style="position: relative;"><b>Relevant Courses</b> <span style="position: absolute; right: 1090px;"><i class="change">Course Name 1, Course Name 2</i></span></div></li>
         </ul>
-
-
+        <button class="btn btn-dark" id="edit_junior">Edit</button>
+       
+    {% block script %}
+        <script src="{% static 'builder/cv.js' %}"></script>
+    {% endblock %}
 {% endblock %}
