--- a/Builder/templates/Builder/index.html
+++ b/Builder/templates/Builder/index.html
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-md-2">
-        <a href ="{% url 'template' 'senior' %}"><div class="card text-white bg-dark mb-3 card_container" style="max-width: 18rem;">
+        <a href ="{% url 'template' 'senior' %}" style="text-decoration: none;"><div class="card text-white bg-dark mb-3 card_container" style="max-width: 18rem;">
             <div class="card-header">Software Engineer</div>
             <div class="card-body">
                 <h5 class="card-title">Senior</h5>
@@ -29,7 +29,7 @@
     </div>
 
     <div class="col-md-2">
-        <a href ="{% url 'template' 'ux' %}"><div class="card text-white bg-dark mb-3 card_container" style="max-width: 18rem;">
+        <a href ="{% url 'template' 'ux' %}" style="text-decoration: none;"><div class="card text-white bg-dark mb-3 card_container" style="max-width: 18rem;">
             <div class="card-header">UX/UI Designer </div>
             <div class="card-body">
                 <h5 class="card-title">Professional Designer</h5>
